# MADS-MMS-Exam2

./: .gitignore  .pre-commit-config.yaml  README.md  exam2.ipynb  pyproject.toml  requirements.txt
helper_functions/: data_manipulation.py  plot_clusters.py
